--- a/Deployment.yml
+++ b/Deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: container1
-        image: 
+        image: najamrizvi3/projd
         ports:
         - containerPort: 8085
 ---
